# davidtest

./: Cargo.toml  LICENSE_MIT  README.md  pom.xml
http_server/: Cargo.toml
http_server/res/: index.html  uploadtest.js
http_server/res/css/: app.6014224c.css  chunk-454399bf.ab4cb9d7.css  chunk-65365244.308229c4.css  chunk-vendors.0b2e8b5e.css
http_server/res/js/: about.ec0c906a.js  about.ec0c906a.js.map  app.7c8a40aa.js  app.7c8a40aa.js.map  chunk-454399bf.6a677433.js  chunk-454399bf.6a677433.js.map  chunk-49e8453a.609015db.js  chunk-49e8453a.609015db.js.map  chunk-65365244.b19bf3bd.js  chunk-65365244.b19bf3bd.js.map  chunk-vendors.8ec3488f.js  chunk-vendors.8ec3488f.js.map
http_server/src/: main.rs
src/: lib.rs
src/main/java/com/bakuanimation/davidtest/: UploadTest.java
www/: index.js  package-lock.json  package.json
