[package]
name = "bakuanimation-davidtest"
version = "0.1.0"
authors = ["David Fauthoux <david.fauthoux@gmail.com>"]
edition = "2018"

[dependencies]
hyper = { version = "=0.13.0-alpha.4" }
log = "0.4"
multipart = { version = "0.16", default-features = false, features = ["server"], optional = true }
warp = { git = "https://github.com/seanmonstar/warp" }
tokio = "0.2.0-alpha.6"
pretty_env_logger = "0.3"
futures-preview = "0.3.0-alpha.19"
